[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level4.gd" type="Script" id=4]
[ext_resource path="res://fonts/fixedsys.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ParticlesMaterial" id=1]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Level4" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, -344 )

[node name="DeathParticles" parent="Player" index="5"]
process_material = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1769460, 3, 0, -1769459, 0, 0, -1769458, 0, 0, -1769457, 0, 0, -1769456, 0, 0, -1769455, 0, 0, -1769454, 0, 0, -1769453, 0, 0, -1769452, 0, 0, -1769451, 0, 0, -1769450, 0, 0, -1769449, 0, 0, -1769448, 0, 0, -1769447, 0, 0, -1769446, 4, 0, -1703924, 0, 0, -1703916, 0, 0, -1703912, 0, 0, -1703910, 0, 0, -1638388, 0, 0, -1638380, 0, 0, -1638376, 0, 0, -1638374, 0, 0, -1572852, 0, 0, -1572844, 6, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1572840, 5, 0, -1572838, 0, 0, -1507316, 0, 0, -1507302, 0, 0, -1441780, 0, 0, -1441766, 0, 0, -1376244, 0, 0, -1376239, 10, 0, -1376238, 0, 0, -1376237, 0, 0, -1376236, 0, 0, -1376235, 0, 0, -1376234, 0, 0, -1376233, 0, 0, -1376232, 0, 0, -1376231, 0, 0, -1376230, 5, 0, -1310708, 0, 0, -1310702, 0, 0, -1245172, 0, 0, -1245166, 0, 0, -1179636, 0, 0, -1179630, 0, 0, -1114100, 0, 0, -1114094, 0, 0, -983060, 0, 0, -1048564, 0, 0, -1048558, 0, 0, -917524, 0, 0, -983028, 0, 0, -983022, 6, 0, -983021, 0, 0, -851988, 0, 0, -917492, 0, 0, -917485, 6, 0, -917484, 0, 0, -786452, 0, 0, -851956, 0, 0, -851948, 0, 0, -720916, 0, 0, -720903, 0, 0, -720902, 8, 0, -786420, 0, 0, -786419, 7, 0, -786412, 0, 0, -655380, 0, 0, -655367, 0, 0, -655366, 8, 0, -720884, 6, 0, -720883, 0, 0, -720882, 7, 0, -720876, 0, 0, -589844, 0, 0, -589831, 0, 0, -589830, 8, 0, -655347, 6, 0, -655346, 0, 0, -655345, 8, 0, -655340, 0, 0, -524308, 0, 0, -524295, 0, 0, -524294, 8, 0, -589810, 0, 0, -589809, 8, 0, -589804, 0, 0, -458772, 0, 0, -458759, 0, 0, -458758, 8, 0, -524274, 0, 0, -524273, 8, 0, -524268, 0, 0, -393236, 0, 0, -393223, 0, 0, -393222, 8, 0, -458738, 0, 0, -458737, 8, 0, -458732, 0, 0, -327700, 0, 0, -327687, 0, 0, -327686, 8, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 5, 0, -393196, 0, 0, -262164, 0, 0, -262162, 12, 0, -262151, 0, 0, -262150, 8, 0, -327660, 0, 0, -196638, 1, 0, -196637, 1, 0, -196636, 1, 0, -196635, 1, 0, -196634, 1, 0, -196633, 1, 0, -196632, 1, 0, -196631, 1, 0, -196630, 1, 0, -196629, 1, 0, -196628, 1, 0, -196627, 1, 0, -196626, 1, 0, -196625, 1, 0, -196624, 1, 0, -196623, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 15, 0, -262124, 0, 0, -131102, 2, 0, -131101, 2, 0, -131100, 2, 0, -131099, 2, 0, -131098, 2, 0, -131097, 2, 0, -131096, 2, 0, -131095, 2, 0, -131094, 2, 0, -131093, 2, 0, -131092, 2, 0, -131091, 2, 0, -131090, 2, 0, -131089, 2, 0, -131088, 2, 0, -131087, 2, 0, -131086, 2, 0, -131085, 2, 0, -131084, 18, 0, -131082, 4, 0, -131073, 0, 0, -196608, 8, 0, -196588, 0, 0, -65566, 2, 0, -65565, 2, 0, -65564, 2, 0, -65563, 2, 0, -65562, 2, 0, -65561, 2, 0, -65560, 2, 0, -65559, 2, 0, -65558, 2, 0, -65557, 2, 0, -65556, 2, 0, -65555, 2, 0, -65554, 2, 0, -65553, 2, 0, -65552, 2, 0, -65551, 2, 0, -65550, 2, 0, -65549, 2, 0, -65548, 18, 0, -65546, 6, 0, -65545, 4, 0, -65537, 0, 0, -131072, 8, 0, -131052, 0, 0, -30, 2, 0, -29, 2, 0, -28, 2, 0, -27, 2, 0, -26, 2, 0, -25, 2, 0, -24, 2, 0, -23, 2, 0, -22, 2, 0, -21, 2, 0, -20, 2, 0, -19, 2, 0, -18, 2, 0, -17, 2, 0, -16, 2, 0, -15, 2, 0, -14, 2, 0, -13, 2, 0, -12, 18, 0, -9, 6, 0, -8, 4, 0, -1, 0, 0, -65536, 8, 0, -65516, 0, 0, 65506, 2, 0, 65507, 2, 0, 65508, 2, 0, 65509, 2, 0, 65510, 2, 0, 65511, 2, 0, 65512, 2, 0, 65513, 2, 0, 65514, 2, 0, 65515, 2, 0, 65516, 2, 0, 65517, 2, 0, 65518, 2, 0, 65519, 2, 0, 65520, 2, 0, 65521, 2, 0, 65522, 2, 0, 65523, 2, 0, 65524, 18, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 20, 0, 0, 131042, 2, 0, 131043, 2, 0, 131044, 2, 0, 131045, 2, 0, 131046, 2, 0, 131047, 2, 0, 131048, 2, 0, 131049, 2, 0, 131050, 2, 0, 131051, 2, 0, 131052, 2, 0, 131053, 2, 0, 131054, 2, 0, 131055, 2, 0, 131056, 2, 0, 131057, 2, 0, 131058, 2, 0, 131059, 2, 0, 131060, 18, 0, 131061, 14, 0, 131062, 14, 0, 131063, 14, 0, 131064, 14, 0, 131065, 14, 0, 131066, 14, 0, 131067, 14, 0, 131068, 14, 0, 131069, 14, 0, 131070, 14, 0, 131071, 14, 0, 65536, 14, 0, 65537, 14, 0, 65538, 14, 0, 65539, 14, 0, 65540, 14, 0, 65541, 14, 0, 65542, 14, 0, 65543, 14, 0, 65544, 14, 0, 65545, 14, 0, 65546, 14, 0, 65547, 14, 0, 65548, 14, 0, 65549, 14, 0, 65550, 14, 0, 65551, 14, 0, 65552, 14, 0, 65553, 14, 0, 65554, 14, 0, 65555, 14, 0, 65556, 0, 0, 196578, 2, 0, 196579, 2, 0, 196580, 2, 0, 196581, 2, 0, 196582, 2, 0, 196583, 2, 0, 196584, 2, 0, 196585, 2, 0, 196586, 2, 0, 196587, 2, 0, 196588, 2, 0, 196589, 2, 0, 196590, 2, 0, 196591, 2, 0, 196592, 2, 0, 196593, 2, 0, 196594, 2, 0, 196595, 2, 0, 196596, 18, 0, 196597, 13, 0, 196598, 13, 0, 196599, 13, 0, 196600, 13, 0, 196601, 13, 0, 196602, 13, 0, 196603, 13, 0, 196604, 13, 0, 196605, 13, 0, 196606, 13, 0, 196607, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 0, 0, 262114, 2, 0, 262115, 2, 0, 262116, 2, 0, 262117, 2, 0, 262118, 2, 0, 262119, 2, 0, 262120, 2, 0, 262121, 2, 0, 262122, 2, 0, 262123, 2, 0, 262124, 2, 0, 262125, 2, 0, 262126, 2, 0, 262127, 2, 0, 262128, 2, 0, 262129, 2, 0, 262130, 2, 0, 262131, 2, 0, 262132, 18, 0, 262133, 13, 0, 262134, 13, 0, 262135, 13, 0, 262136, 13, 0, 262137, 13, 0, 262138, 13, 0, 262139, 13, 0, 262140, 13, 0, 262141, 13, 0, 262142, 13, 0, 262143, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 0, 0, 327650, 2, 0, 327651, 2, 0, 327652, 2, 0, 327653, 2, 0, 327654, 2, 0, 327655, 2, 0, 327656, 2, 0, 327657, 2, 0, 327658, 2, 0, 327659, 2, 0, 327660, 2, 0, 327661, 2, 0, 327662, 2, 0, 327663, 2, 0, 327664, 2, 0, 327665, 2, 0, 327666, 2, 0, 327667, 2, 0, 327668, 18, 0, 327669, 13, 0, 327670, 13, 0, 327671, 13, 0, 327672, 13, 0, 327673, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 13, 0, 262159, 13, 0, 262160, 13, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 0, 0, 393186, 2, 0, 393187, 2, 0, 393188, 2, 0, 393189, 2, 0, 393190, 2, 0, 393191, 2, 0, 393192, 2, 0, 393193, 2, 0, 393194, 2, 0, 393195, 2, 0, 393196, 2, 0, 393197, 2, 0, 393198, 2, 0, 393199, 2, 0, 393200, 2, 0, 393201, 2, 0, 393202, 2, 0, 393203, 2, 0, 393204, 18, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 458722, 2, 0, 458723, 2, 0, 458724, 2, 0, 458725, 2, 0, 458726, 2, 0, 458727, 2, 0, 458728, 2, 0, 458729, 2, 0, 458730, 2, 0, 458731, 2, 0, 458732, 2, 0, 458733, 2, 0, 458734, 2, 0, 458735, 2, 0, 458736, 2, 0, 458737, 2, 0, 458738, 2, 0, 458739, 2, 0, 458740, 18, 0, 524258, 2, 0, 524259, 2, 0, 524260, 2, 0, 524261, 2, 0, 524262, 2, 0, 524263, 2, 0, 524264, 2, 0, 524265, 2, 0, 524266, 2, 0, 524267, 2, 0, 524268, 2, 0, 524269, 2, 0, 524270, 2, 0, 524271, 2, 0, 524272, 2, 0, 524273, 2, 0, 524274, 2, 0, 524275, 2, 0, 524276, 18, 0, 458792, 12, 0, 589794, 2, 0, 589795, 2, 0, 589796, 2, 0, 589797, 2, 0, 589798, 2, 0, 589799, 2, 0, 589800, 2, 0, 589801, 2, 0, 589802, 2, 0, 589803, 2, 0, 589804, 2, 0, 589805, 2, 0, 589806, 2, 0, 589807, 2, 0, 589808, 2, 0, 589809, 2, 0, 589810, 2, 0, 589811, 2, 0, 589812, 18, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 15, 0, 589859, 2, 0, 589860, 2, 0, 589861, 2, 0, 589862, 2, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 589868, 2, 0, 589869, 2, 0, 589870, 2, 0, 589871, 2, 0, 589872, 2, 0, 589873, 18, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 655402, 2, 0, 655403, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 655408, 2, 0, 655409, 18, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 720943, 2, 0, 720944, 2, 0, 720945, 18, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0, 786474, 2, 0, 786475, 2, 0, 786476, 2, 0, 786477, 2, 0, 786478, 2, 0, 786479, 2, 0, 786480, 2, 0, 786481, 18, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 2, 0, 852011, 2, 0, 852012, 2, 0, 852013, 2, 0, 852014, 2, 0, 852015, 2, 0, 852016, 2, 0, 852017, 18, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 2, 0, 917548, 2, 0, 917549, 2, 0, 917550, 2, 0, 917551, 2, 0, 917552, 2, 0, 917553, 18, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -408, -72 )
scale = Vector2( 1.36975, 1.4098 )
color = Color( 0.141176, 0.631373, 0.611765, 1 )
polygon = PoolVector2Array( -126.984, -454.495, -128, -40, -128, 312, 824, 312, 824, -456 )
__meta__ = {
"_edit_group_": true
}

[node name="orange1" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -171.81, 0.571426 )
scale = Vector2( 1.52381, 0.976191 )
color = Color( 1, 0.780392, 0.780392, 1 )
polygon = PoolVector2Array( -8, 24, -8, 56, -8, 88, 328, 88, 328, 48, 328, 24, 280, 24 )

[node name="Cannon" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, -40 )

[node name="Cannon2" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, -56 )

[node name="Cannon3" parent="." instance=ExtResource( 2 )]
position = Vector2( -56, -56 )

[node name="Controls" type="RichTextLabel" parent="."]
visible = false
margin_left = -120.0
margin_right = 16.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "WASD TO MOVE
SPACE TO JUMP
CANNON GO FAST
SPACE TO LAUNCH
LAVA, SPIKES BAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="RichTextLabel" parent="."]
margin_left = 560.0
margin_top = 96.0
margin_right = 688.0
margin_bottom = 120.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "DOOR IS GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="door_touch" from="Player" to="." method="_on_Player_door_touch"]
[connection signal="player_death" from="Player" to="HUD" method="_on_Player_player_death"]
[connection signal="area_entered" from="Player/CannonCollisonDetector" to="." method="_on_CannonCollisonDetector_area_entered"]

[editable path="Player"]
